refactor: adopt quarkus native security chain